--- a/deck/templates/deck_list.html
+++ b/deck/templates/deck_list.html
@@ -5,4 +5,10 @@
 <h1>This is deck_list.html</h1>
 <p>Make a <a href="{% url 'new-deck' %}">new</a> deck</p>
 
+<ul>
+{% for deck in decks %}
+<li>{{ deck }}</li>
+{% endfor %}
+</ul>
+
 {% endblock %}
