--- a/deck/templates/new_card.html
+++ b/deck/templates/new_card.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
+<!-- <h1>Add new card!</h1> -->
 {% block content %}
-<h1>Add new card!</h1>
+<h2>{% if pk %} Edit {% else %} New {% endif %} Card</h2>
 <form method="POST">
     {% csrf_token %}
     {% for field in form %}
@@ -10,9 +11,9 @@
         {{ field }}
     </div>
     {% endfor %}
-<div>
-    <button type="submit">Save</button>
-</div>
+    <div>
+        <button type="submit">Save</button>
+    </div>
 </form>
 
 {% endblock content %}
