updated css to show all cards on screen. re-wrote toggle function to flip cards. updated first css class name card__face to .card.

--- a/deck/templates/deck_details.html
+++ b/deck/templates/deck_details.html
@@ -4,9 +4,33 @@
 <h1>Title: {{ deck.title }}</h1>
 <h2>Subject: {{ deck.subject }}</h2>
 
-{% for card in cards %}
-<p>{{card}}</p>
-{% endfor %}
+<div id="card-details" class="scene scene--card">
+    {% for card in cards %}
+    <div class="card">
+        <span class="close">&times;</span>
+        <div class="card__face card__face--question">
+            {{card.question}}
+        </div>
+        <div class="card__face card__face--answer">
+            {{card.answer}}
+        </div>
+        <button type='button'
+            class="block text-sm text-slate-500 mr-4 py-2 px-4 rounded-full border-0 text-sm font-semibold bg-violet-50 text-violet-700 hover:bg-violet-200">
+            <a href="{% url 'edit-card' deck.pk card.pk %}">Edit</a></button>
+        <button type='button'
+            class="block text-sm text-slate-500 mr-4 py-2 px-4 rounded-full border-0 text-sm font-semibold bg-violet-50 text-violet-700 hover:bg-violet-200">
+            <a href="{% url 'delete-card' deck.pk card.pk %}">Delete</a></button>
+    </div>
+    {% endfor %}
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+
+<div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+</div>
 
 <h3><a href="{% url 'new-card' pk=deck.pk %}">Add a new card!</a></h3>
 <button type='button'
@@ -19,6 +43,3 @@
 
 
 {% endblock %}
-
-<!-- <h3>Edit this deck <a href="{% url 'edit-deck' deck.pk %}">here</a></h3> -->
-<!-- <h3>Delete this deck? <a href="{% url 'delete-deck' deck.pk %}">Click here!</a></h3> -->
