--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,19 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <script src="{% static 'main.js' %}" defer></script>
     <title>Base</title>
 </head>
+
 <body>
     {% block content %}
-    {% endblock %} 
+    {% endblock %}
 </body>
+
 </html>
