--- a/deck/templates/deck_details.html
+++ b/deck/templates/deck_details.html
@@ -44,6 +44,11 @@
 <button type='button'
     class="block text-sm text-slate-500 mr-4 py-2 px-4 rounded-full border-0 text-sm font-semibold bg-violet-50 text-violet-700 hover:bg-violet-200">
     <a href="{% url 'delete-deck' deck.pk %}">Delete</a></button>
+<br>
+<div>
+    <p>How many did you get right?</p>
+    <p id="right_button_tally"></p>
+</div>
 
 
 {% endblock %}
