--- a/static/styles.css
+++ b/static/styles.css
@@ -66,3 +66,10 @@ button {
     color: white;
     visibility: visible;
 }
+
+#right_button_tally{
+    color: hotpink;
+    font-weight: bold;
+    font-size: large;
+    
+}
