--- a/templates/base.html
+++ b/templates/base.html
@@ -6,12 +6,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <script src="{% static 'main.js' %}" defer></script>
     <title>Base</title>
 </head>
 
-<body>
+<body class="is-flex-wrap-wrap">
     {% block content %}
     {% endblock %}
 </body>
