--- a/static/styles.css
+++ b/static/styles.css
@@ -1,37 +1,62 @@
-* {
-    background-color: rgba(127, 255, 212, 0.723)
+/* styling for count of correct guesses at top of page */
+#right_button_tally {
+    color: hotpink;
+    font-weight: bold;
+    font-size: large;
+
 }
 
-body {
-    font-family: sans-serif;
+/* styling for icons */
+.fa {
+    font-size: 10px;
 }
+
+
+
+/* styling for the cards in deck_details */
 
 .scene {
     display: inline-block;
-    width: 200px;
-    height: 260px;
-    border: 1px solid #CCC;
-    margin: 40px 0;
-    perspective: 600px;
 }
 
-
 .card {
-    position: relative;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
     cursor: pointer;
     transform-style: preserve-3d;
     transform-origin: center right;
     transition: transform 1s;
 }
 
-.card.is-flipped {
-    transform: translateX(-100%) rotateY(-180deg);
+/* styling of prev and next arrows */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 35%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
 }
 
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 1.8);
+}
+
+/* styling for card --not flipped over--*/
 .card__face {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 100%;
     line-height: 260px;
@@ -43,33 +68,42 @@ body {
 
 .card__face--question {
     background-color: plum;
+    display: flex;
 }
 
 .card__face--answer {
     background-color: blueviolet;
     transform: rotateY(180deg);
-    /* z-index: 1; */
+    display: none;
 }
 
-.button {
-    visibility: hidden;
+.congrats-button {
+    display: none;
+}
+
+.edit-card,
+.delete-card {
+    font-size: xx-small !important;
 }
 
 
-button {
-    position: relative;
-    margin-top: 25px;
+
+/* styling for when card is --flipped over-- */
+.card.is-flipped {
+    transform: translateX(-100%) rotateY(-180deg);
 }
 
-.button.show {
-    background-color: blue;
-    color: white;
-    visibility: visible;
+.card__face--question.hide-question {
+    display: none;
 }
 
-#right_button_tally{
-    color: hotpink;
-    font-weight: bold;
-    font-size: large;
-    
+.card__face--answer.show-answer {
+    background-color: blueviolet;
+    transform: rotateY(180deg);
+    display: flex;
+}
+
+.congrats-button.show {
+    display: flex;
+    float: right;
 }
