updated settings to redirect new users to their profile pages. changed deck urls to start with ''. want to add new homepage that demos the program and allows user to sign-up/login with a model popup.

--- a/deck/templates/deck_list.html
+++ b/deck/templates/deck_list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<h1 class="title is-flex is-justify-content-center"><i>Study flashcards!</i></h1>
+<h1 class="title is-flex is-justify-content-center mt-2"><i>Study flashcards!</i></h1>
 
 <section class="section is-large">
     <p class="subtitle ">Current Decks: </p>
