--- a/deck/templates/new_deck.html
+++ b/deck/templates/new_deck.html
@@ -2,8 +2,9 @@
 
 {% block content %}
 <!-- <h1>Add new deck!</h1> -->
-<h2>{% if pk %} Edit {% else %} New {% endif %} Deck</h2>
+<h2 class="title is-flex is-justify-content-center mt-2"><i>{% if pk %} Edit {% else %} New {% endif %} Deck</i></h2>
 <section class="section">
+    <p class="subtitle ">{% if pk %}Current {% else%} Enter {% endif %} Deck:</p>
     <form method="POST">
         {% csrf_token %}
         {% for field in form %}
