--- a/deck/templates/new_card.html
+++ b/deck/templates/new_card.html
@@ -2,8 +2,9 @@
 
 <!-- <h1>Add new card!</h1> -->
 {% block content %}
-<h2>{% if pk %} Edit {% else %} New {% endif %} Card</h2>
+<h2 class="title is-flex is-justify-content-center mt-2"><i>{% if pk %} Edit {% else %} New {% endif %} Card</i></h2>
 <section class="section">
+    <p class="subtitle ">{% if pk %}Current {% else%} Enter {% endif %} Card:</p>
     <form method="POST">
         {% csrf_token %}
         {% for field in form %}
